umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_moleculelike_cdk_sgroup-ord-mixture.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 24
bond_count: 23
sum_formula: C18ClN2O3
graph6: WhEG_CA?G?_C??????G?@??C??G?AG?A???@???G??@??@?
