umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_moleculelike_cdk_sgroup-xl-copolymer.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 20
bond_count: 18
sum_formula: C14
graph6: ShCG?C@?G?_@?C??_???@??C?@G??G??C
