umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_moleculelike_cdk_too.many.rings.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 44
bond_count: 97
sum_formula: C3B36O4P
graph6: "kuysA`HIHGah?^????G?A??W?@o?Ao?A???g??HG??g_?AP??Ah???N_???????@????G????o???@o???@W????_????D?????c_???@P????AP????@S_????Bw????????????C??????O??????_??????_"
