umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_moleculelike_cdk_triphenyl-phosphate-expanded.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 23
bond_count: 25
sum_formula: C18O4P
graph6: "ViO_S?A?G?_@?`?O??G?@??C@?G?????CC?@@?????C_"
