umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_moleculelike_chem3d_NITROFURANTOIN.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 23
bond_count: 24
sum_formula: C8H6N4O5
graph6: VhCQGG@?G?_@?@?C_?O?@??G_??C??C???_??A???G??
